--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,9 @@ development:
 test:
   <<: *default
   database: myprofile_test
+  username: myprofile
+  password: <%= ENV["MYPROFILE_DATABASE_PASSWORD"] %>
+#  username and password added for fly test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
